--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>title</title>
+<title>Research Proposal 2014</title>
 </head>
 <body>
 <ul>
